--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./src/assets/two-dogs.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Bella & Mishka</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-b md:bg-gradient-to-r  from-green-800 to-gray-700">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
